# vlm-defect-detection

./: .gitattributes  .gitignore  Dockerfile  MODEL_CARD.md  Makefile  README.md  SETUP.md  error_log.txt  eval_dashboard.html  mvtec_train.json  prepare_mvtec_json.py  pyproject.toml  requirements.txt  run_docker_train.bat  setup_env.bat  setup_vlm_env.bat  train_mvtec.py  training-output.txt  verify_install.py
.github/workflows/: ci.yml
configs/: base.yaml  colab_a100.yaml  local_8gb.yaml
docker/: Dockerfile  docker-compose.yml
docs/: VLM_Product_Requirements_Document.docx  Vision-model-summary.docx
notebooks/: Colab_Training.ipynb  LLaVA_Train_Colab.ipynb  LLaVA_ULTIMATE_FIX (1).ipynb  VLM_LLaVA_Colab_Training (1).ipynb  llava.ipynb
scripts/: compare_checkpoints.py  evaluate.py  inference.py  prepare_data.py  push_to_hub.py  train.py  verify_install.py
src/vlm_defect/: __init__.py  app.py  cli.py  config.py  data.py  evaluate.py  model.py  train.py  trainer.py  verify_files.py
tests/: conftest.py  test_data.py  test_evaluate.py  test_model.py
