[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-defect-detection"
version = "0.1.0"
description = "VLM-based manufacturing defect detection using LLaVA-1.5-7B fine-tuned on MVTec AD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # PyTorch — no upper bound so Colab (2.4+) and recent runtimes work
    "torch>=2.2",
    "torchvision>=0.17",
    "torchaudio>=2.2",
    # LLaVA core
    "transformers==4.37.2",
    "tokenizers==0.15.1",
    "accelerate==0.27.2",
    "peft==0.9.0",
    "bitsandbytes>=0.41.3",
    # Logging & experiment tracking
    "wandb>=0.16",
    # Config parsing
    "pyyaml>=6.0",
    # Inference UI
    "gradio==4.16.0",
    # LLaVA aux deps
    "shortuuid",
    "einops",
    "einops-exts",
    "timm",
    "openai-clip",
    "scikit-learn",
    "markdown2",
    "protobuf",
    "sentencepiece",
    "requests",
    "pillow",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "ruff"]

[project.scripts]
vlm-prepare = "vlm_defect.cli:prepare"
vlm-train   = "vlm_defect.cli:train"

[tool.setuptools.packages.find]
where = ["src"]
