[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-defect-detection"
version = "0.1.0"
description = "VLM-based manufacturing defect detection using LLaVA-1.5-7B fine-tuned on MVTec AD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # PyTorch — no upper bound so Colab (2.4+) and recent runtimes work
    "torch>=2.2",
    "torchvision>=0.17",
    "torchaudio>=2.2",
    # Config and I/O
    "pyyaml>=6.0",
    "pillow",
    "requests",
]

[project.optional-dependencies]
# Full training stack — use this for local or Colab training:
#   pip install -e ".[train]"
train = [
    "transformers>=4.37.2",
    "tokenizers>=0.15.1",
    "accelerate>=0.27.2",
    "peft>=0.9.0",
    "bitsandbytes>=0.41.3",
    "wandb>=0.16",
    "scikit-learn",
    "sentencepiece",
    "protobuf",
]

# Training + Flash Attention 2 (~1 GB VRAM savings on Ampere/Hopper GPUs):
#   pip install -e ".[train,flash]"
flash = [
    "flash-attn>=2.5",
]

# Inference only — no bitsandbytes, no training deps:
#   pip install -e ".[inference]"
inference = [
    "transformers>=4.37.2",
    "tokenizers>=0.15.1",
    "accelerate>=0.27.2",
    "peft>=0.9.0",
    "gradio>=4.16.0",
    "sentencepiece",
]

dev = ["pytest", "black", "isort", "ruff"]

[project.scripts]
vlm-prepare = "vlm_defect.cli:prepare"
vlm-train   = "vlm_defect.cli:train"
vlm-eval    = "vlm_defect.cli:eval"

[tool.setuptools.packages.find]
where = ["src"]
